# VeriBiota

./: .gitignore  .repointel.json  AGENTS.md  Agentfile.md  Main.lean  Makefile  README.md  lakefile.lean  mkdocs.yml  package-lock.json  package.json  veribiota
.github/workflows/: ci.yml  codeql.yml  container.yml  docs.yml  lean-check.yml  release.yml  scorecard.yml  tier0_snapshots.yml
Biosim/CLI/: Profile.lean  Verify.lean
Biosim/Examples/: CertificateDemo.lean
Biosim/IO/: Certificate.lean  Checks.lean  Importer.lean  Model.lean  Shared.lean
Biosim/VeriBiota/: CheckAll.lean  Generated.lean  Theorems.lean
Tests/: Main.lean
adapters/: README.md
docs/: ATTESTED_PROFILES.md  CI_ADOPTION_KIT.md  INTEGRATION.md  PROFILE_SPEC.md  QUICKSTART.md  architecture.md  cli.md  getting-started.md  index.md  model-ir.md  roadmap.md  runtime_checks.md  verification-workflow.md  why.md
docs/schema/: edit_dag.md
engine/biosim-checks/: Cargo.toml
engine/biosim-checks/src/: lib.rs
engine/biosim-checks/tests/: biosim_eval.rs
examples/: checks.mass.json  trajectory.counts.jsonl  trajectory.counts.violation.jsonl
examples/veribiota-example-project/: README.md  pyproject.toml
examples/veribiota-example-project/.github/workflows/: veribiota.yml
examples/veribiota-example-project/tests/dags/: micro.dag.json
profiles/: manifest.json  status.json
schema/: veribiota.certificate.v1.json  veribiota.checks.v1.json  veribiota.edit_dag.v1.json
schemas/: profile_status.schema.json
scripts/: schemaValidate.mjs  validateProfiles.mjs  validate_all.sh  validate_repo.sh
(+45 files in other folders)
